--- a/cpp_study.vcxproj
+++ b/cpp_study.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cpp_study.cpp" />
+    <ClCompile Include="marine.cpp" />
+    <ClCompile Include="photon_cannon.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
