--- a/cpp_study.vcxproj.filters
+++ b/cpp_study.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="photon_cannon.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="mystring.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="operator.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
