--- a/cpp_study.vcxproj
+++ b/cpp_study.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="array.cpp" />
+    <ClCompile Include="int.cpp" />
     <ClCompile Include="marine.cpp" />
     <ClCompile Include="mystring.cpp" />
     <ClCompile Include="operator.cpp" />
