--- a/cpp_study.vcxproj.filters
+++ b/cpp_study.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="operator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="int.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="array.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
