--- a/cpp_study.vcxproj
+++ b/cpp_study.vcxproj
@@ -150,6 +150,8 @@
     <ClCompile Include="template.cpp" />
     <ClCompile Include="utility.cpp" />
     <ClCompile Include="Mycell.cpp" />
+    <ClCompile Include="variadic template 2.cpp" />
+    <ClCompile Include="variadic template 3.cpp" />
     <ClCompile Include="variadic template.cpp" />
   </ItemGroup>
   <ItemGroup>
