--- a/cpp_study.vcxproj.filters
+++ b/cpp_study.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="variadic template.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="variadic template 2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="variadic template 3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utility.h">
